# mythology-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.txt  README_ADDON.md  SECURITY.md  engine_last_run.json  pyproject.toml  requirements.txt  send_to_forge.sh  setup.py
audience/: channel_brain.py
audience/interaction_engine/: audience_engine.py
bootstrap/engines/: bootstrap_engine.py  config_bootstrap.py  environment_check.py  path_bootstrap.py  provider_check.py
bootstrap/scripts/: safe_run.sh  setup_termux.sh
bootstrap/tools/: run_bootstrap.py
channel/release_package/: package_builder.py
configs/: series.json  series_state.json  studio_config.example.json  studio_profile.json
core/governor/: governor.py
docs/: ARCHITECTURE.md  AUDIO_PROVIDER.md  BOOTSTRAP.md  CLI.md  CONFIGURATION.md  EPISODE_PIPELINE.md  FIRST_REAL_PROVIDER.md  IMAGE_PROVIDER.md  INSTALLATION.md  PIPELINE.md  PLATFORM_ADAPTERS.md  PROVIDERS.md  RELEASE_AND_PUBLISH.md  ROADMAP.md  STUDIO_LAYER.md  TERMUX_NOTES.md  USAGE.md
mission_control_android/: README.md
platform_adapters/: adapter_manager.py
production/: episode_pipeline.py
publishing/: oauth_manager.py  publish_engine.py  scheduler.py
runtime/: demo_cycle.py  run_studio.py  run_studio_series.py
tools/: export_episode_bundle.py  myth  myth-autopilot  myth-clean  myth-dashboard  myth-doctor  myth-engine  myth-forge  myth-herald  myth-log  myth-orchestrator  myth-pack  myth-push  myth-release  myth-release-pack  myth-run  myth-run-video  myth-schedule  myth-series  myth-status  series_planner.py
(+55 files in other folders)
